--- a/style/sass.css
+++ b/style/sass.css
@@ -3349,6 +3349,7 @@ body {
   /* #####################   SECTION CINCO ############################# */
   /* #####################   SECTION SEIS ############################# */
   /* #####################   SECTION OCHO ############################# */
+  /* #####################   SECTION OCHO ############################# */
 }
 .body__index main .boton_portafolio {
   position: absolute;
@@ -4443,6 +4444,82 @@ body {
 .body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos:hover {
   border-bottom: 2px solid #000000;
   cursor: url("../assets/img/ir.svg") 15 10, auto;
+}
+.body__index main .cont_pilar {
+  width: 100vw;
+  height: 110vh;
+  background: #171717;
+}
+.body__index main .cont_pilar .cont_contenido_pilar {
+  background: rgba(80, 80, 80, 0.01);
+  -webkit-backdrop-filter: blur(2.5px);
+          backdrop-filter: blur(2.5px);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3em 2em 3em 2em;
+}
+.body__index main .cont_pilar .cont_contenido_pilar .contador_pilar {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
+.body__index main .cont_pilar .cont_contenido_pilar .contador_pilar .contador {
+  color: #FFF;
+  font-family: MargoBeuys;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 136%;
+  text-transform: uppercase;
+}
+.body__index main .cont_pilar .cont_contenido_pilar .titulo h2 {
+  color: #FFF;
+  text-shadow: 0px 0px 38px #000;
+  font-family: MargoBeuys;
+  font-size: 90px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 138.5%;
+  /* 124.65px */
+  letter-spacing: 4.5px;
+  text-transform: capitalize;
+}
+.body__index main .cont_pilar .cont_contenido_pilar .contenido_pilar {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+}
+.body__index main .cont_pilar .cont_contenido_pilar .contenido_pilar .parrafo_uno {
+  width: 20vw;
+  color: #FFF;
+  font-family: Gotham;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 138.5%;
+  letter-spacing: 0.75px;
+  text-transform: capitalize;
+}
+.body__index main .cont_pilar .cont_contenido_pilar .contenido_pilar .parrafo_dos {
+  color: #FFF;
+  font-family: Gotham;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 138.5%;
+  letter-spacing: 0.75px;
+  text-transform: capitalize;
+  white-space: nowrap;
+}
+.body__index main .cont_pilar .cont_contenido_pilar .cont_animacion_uno {
+  top: -5em;
+  position: absolute;
 }
 
 @keyframes scrollderecha {
