--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1325,7 +1325,6 @@
             width: 100vw;
             height: 110vh;
             background: #171717;
-
             .cont_contenido_pilar {
                 background: rgba(80, 80, 80, 0.01);
                 backdrop-filter: blur(2.5px);
@@ -1374,7 +1373,7 @@
                     flex-direction: row;
                     justify-content: space-between;
                     align-items: end;
-                    
+
                     .parrafo_uno {
                         width: 20vw;
                         color: #FFF;
@@ -1386,6 +1385,7 @@
                         letter-spacing: 0.75px;
                         text-transform: capitalize;
                     }
+
                     .parrafo_dos {
                         color: #FFF;
                         font-family: Gotham;
@@ -1398,9 +1398,114 @@
                         white-space: nowrap
                     }
                 }
-                .cont_animacion_uno{
+
+                .cont_animacion_uno {
                     top: -5em;
-                    position:absolute;
+                    position: absolute;
+                    z-index: 1;
+                    width: 50vw;
+                }
+
+                .cont_animacion_dos {
+                    top: -10em;
+                    position: absolute;
+                    z-index: -1;
+                    width: 0vw;
+                }
+
+                .cont_animacion_tres {
+                    top: -10em;
+                    position: absolute;
+                    z-index: -1;
+                    width: 50vw;
+                }
+            }
+        }
+
+        .cont_pilar_wite {
+            width: 100vw;
+            height: 110vh;
+            background: #ffffff;
+            display: flex;
+
+            .cont_contenido_pilar {
+                background: rgba(255, 255, 255, 0.01);
+                backdrop-filter: blur(2.5px);
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                padding: 3em 2em 3em 2em;
+
+                .contador_pilar {
+                    width: 100%;
+                    display: flex;
+                    justify-content: end;
+
+                    .contador {
+                        color: #000000;
+                        font-family: Margo + Beuys;
+                        font-size: 50px;
+                        font-style: normal;
+                        font-weight: 900;
+                        line-height: 136%;
+                        text-transform: uppercase;
+                    }
+                }
+
+                .titulo {
+                    h2 {
+                        color: #000000;
+                        font-family: Margo + Beuys;
+                        font-size: 90px;
+                        font-style: normal;
+                        font-weight: 900;
+                        line-height: 138.5%;
+                        /* 124.65px */
+                        letter-spacing: 4.5px;
+                        text-transform: capitalize;
+                    }
+                }
+
+                .contenido_pilar {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: end;
+
+                    .parrafo_uno {
+                        width: 20vw;
+                        color: #000000;
+                        font-family: Gotham;
+                        font-size: 15px;
+                        font-style: normal;
+                        font-weight: 300;
+                        line-height: 138.5%;
+                        letter-spacing: 0.75px;
+                        text-transform: capitalize;
+                    }
+
+                    .parrafo_dos {
+                        color: #000000;
+                        font-family: Gotham;
+                        font-size: 15px;
+                        font-style: normal;
+                        font-weight: 300;
+                        line-height: 138.5%;
+                        letter-spacing: 0.75px;
+                        text-transform: capitalize;
+                        white-space: nowrap
+                    }
+                }
+
+                .cont_animacion_dos {
+                    top: -10em;
+                    position: absolute;
+                    z-index: -1;
+                    width: 70vw;
                 }
             }
         }
