--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -541,7 +541,456 @@ p {
 
 @media (max-width: 690px) {}
 
-@media (max-width: 400px) {}
+@media (max-width: 400px) {
+    .conte__menu {
+
+        margin: 2rem 1rem 2rem 1rem;
+    
+        .header__index {
+            display: flex;
+            justify-content: space-between;
+            justify-items: center;
+    
+            .cont__logo__nav {
+                transform: scale(0.9);
+                z-index: 1000;
+                filter: invert(100%);
+            }
+    
+            .icono-menu {
+                transform: scale(0.8);
+                z-index: 1000;
+                margin-right: 5px;
+    
+                .bars__menu {
+                    width: 10px;
+                    height: 10px;
+                    position: relative;
+                    top: 50%;
+                    left: 0%;
+                    transform: translate(-100%, -50%) scale(4);
+    
+                    span {
+                        display: block;
+                        width: 100%;
+                        height: 1px;
+                        background: #000000;
+                        margin-top: 2px;
+                        transform-origin: 0px 100%;
+                        transition: all 800ms;
+                        transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+                    }
+                }
+    
+                .activeline1__bars-menu {
+    
+                    transform: rotate(45deg) translate(0px, -1px);
+    
+                }
+    
+                .activeline2__bars-menu {
+                    opacity: 0;
+                    margin-left: -55vh;
+                    transform: scale(1);
+                }
+    
+                .activeline3__bars-menu {
+                    transform: rotate(-45deg) translate(0.8px, 1px);
+    
+                }
+    
+            }
+        }
+    
+        .contendor_activo_de_menu {
+            padding: 0rem 4rem 3rem 0rem;
+            right: -10em;
+            top: 0px;
+            width: 0px;
+            height: 100vh;
+            position: fixed;
+            z-index: 9;
+            background: #FFF;
+            transform-origin: 0px 0%;
+            transition: all 900ms;
+            transition-delay: 0.1s;
+            transition-timing-function: cubic-bezier(0.51, 1.02, 1, 1.0);
+    
+            .list_menu {
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+    
+    
+                .titulo_list_menu {
+                    color: #979797;
+                    font-family: Sora;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 250;
+                    line-height: 107.5%;
+                    margin-bottom: 20px;
+                }
+    
+                .lista_uno {
+                    width: 0%;
+                    margin-bottom: 20px;
+    
+    
+                    .cont_opcion_lista {
+                        width: 0%;
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        justify-content: start;
+                        overflow: hidden;
+    
+                        .flachamenu {
+    
+                            width: 0%;
+                            border-radius: 0px;
+                            background: #B2D9FF;
+                            transform-origin: 0px 100%;
+                            transition: all 900ms;
+                            transition-delay: 0.1s;
+                            transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.0);
+                        }
+    
+                        a {
+                            transition: all 900ms;
+                            transition-delay: 0.3s;
+                            transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.0);
+                            transform: translateY(100%);
+                            width: 100%;
+                            padding: 5px 0px;
+                            align-items: center;
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: space-between;
+                            color: #000000;
+                            font-family: Sora;
+                            font-size: calc(2em + 1vw);
+                            font-style: normal;
+                            font-weight: 100;
+                            line-height: 107.5%;
+    
+                            p {
+                                color: #989898;
+                                font-family: Sora;
+                                font-size: 20px;
+                                font-style: normal;
+                                font-weight: 300;
+                                line-height: 107.5%;
+                            }
+    
+                        }
+    
+                    }
+    
+                    .cont_opcion_lista:hover {
+                        background: #ffffff;
+                        border-bottom: 0.2px solid #868686;
+                        border-top: 0.2px solid #868686;
+    
+                        .flachamenu {
+                            width: 100px;
+                            height: min-content;
+                            transform: scale(1);
+                            padding: 0.5em 2em;
+                            border-radius: 200px;
+                            background: #B2D9FF;
+                            margin-right: 20px;
+                        }
+    
+                        a {
+                            font-weight: 400;
+                        }
+                    }
+    
+                }
+    
+                .list_social {
+                    width: 0%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+    
+                    .cont_uno {
+                        .titulo_list_social {
+                            color: #979797;
+                            font-family: Sora;
+                            font-size: 18px;
+                            font-style: normal;
+                            font-weight: 250;
+                            line-height: 107.5%;
+                            margin-bottom: 20px;
+                        }
+    
+                        ul {
+                            display: flex;
+                            flex-direction: row;
+                            gap: 1em;
+    
+                            a {
+                                color: #263238;
+                                font-family: Sora;
+                                font-size: 18px;
+                                font-style: normal;
+                                font-weight: 300;
+                                line-height: 107.5%;
+                                /* 19.35px */
+                            }
+                        }
+                    }
+    
+                    .cont_dos {
+                        display: flex;
+                        flex-direction: column;
+    
+                        p {
+                            color: #979797;
+                            font-family: Sora;
+                            font-size: 18px;
+                            font-style: normal;
+                            font-weight: 250;
+                            line-height: 107.5%;
+                            margin-bottom: 20px;
+                        }
+    
+                        h5 {
+                            color: #000;
+                            font-family: Sora;
+                            font-size: 15px;
+                            font-style: normal;
+                            font-weight: 500;
+                            line-height: 107.5%;
+                            display: flex;
+                            padding: 0px 5px 5px 0px;
+                            align-items: center;
+                            align-self: stretch;
+                            border-bottom: 0.5px solid #000;
+                        }
+    
+                    }
+    
+    
+                }
+    
+    
+    
+            }
+    
+        }
+    
+        .contendor_activo_de_menu_op {
+            padding: 8rem 5rem 0rem 5rem;
+            right: 0px;
+            top: 0px;
+            width: 100vw;
+            height: 100vh;
+            position: absolute;
+            z-index: 9;
+            background: #ffffff;
+    
+            .list_menu {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+    
+    
+                .titulo_list_menu {
+                    color: #979797;
+                    font-family: Sora;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 250;
+                    line-height: 107.5%;
+                    margin-bottom: 20px;
+                }
+    
+                .lista_uno {
+                    width: 100%;
+                    margin-bottom: 20px;
+    
+                    .cont_opcion_lista {
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        justify-content: start;
+                        overflow: hidden;
+    
+                        .flachamenu {
+    
+                            width: 0%;
+                            border-radius: 0px;
+                            background: #B2D9FF;
+                            transform-origin: 0px 100%;
+                            transition: all 900ms;
+                            transition-delay: 0.1s;
+                            transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.0);
+                        }
+    
+                        a {
+                            transform: translateY(1%);
+                            width: 100%;
+                            padding: 5px 0px;
+                            align-items: center;
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: space-between;
+                            color: #000000;
+                            font-family: Sora;
+                            font-size: calc(2em + 1vw);
+                            font-style: normal;
+                            font-weight: 100;
+                            line-height: 107.5%;
+    
+                            p {
+                                color: #989898;
+                                font-family: Sora;
+                                font-size: 20px;
+                                font-style: normal;
+                                font-weight: 300;
+                                line-height: 107.5%;
+                            }
+    
+                        }
+    
+                    }
+    
+                    .cont_opcion_lista:hover {
+                        background: #ffffff;
+                        border-bottom: 0.2px solid #868686;
+                        border-top: 0.2px solid #868686;
+    
+                        .flachamenu {
+                            width: 100px;
+                            height: min-content;
+                            transform: scale(1);
+                            padding: 0.5em 2em;
+                            border-radius: 200px;
+                            background: #B2D9FF;
+                            margin-right: 20px;
+                        }
+    
+                        a {
+                            font-weight: 400;
+                        }
+                    }
+    
+                }
+    
+                .list_social {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+    
+                    .cont_uno {
+                        .titulo_list_social {
+                            color: #979797;
+                            font-family: Sora;
+                            font-size: 18px;
+                            font-style: normal;
+                            font-weight: 250;
+                            line-height: 107.5%;
+                            margin-bottom: 20px;
+                        }
+    
+                        ul {
+                            display: flex;
+                            flex-direction: row;
+                            gap: 1em;
+    
+                            a {
+                                color: #263238;
+                                font-family: Sora;
+                                font-size: 18px;
+                                font-style: normal;
+                                font-weight: 300;
+                                line-height: 107.5%;
+                                /* 19.35px */
+                            }
+                        }
+                    }
+    
+                    .cont_dos {
+                        display: flex;
+                        flex-direction: column;
+    
+                        p {
+                            color: #979797;
+                            font-family: Sora;
+                            font-size: 18px;
+                            font-style: normal;
+                            font-weight: 250;
+                            line-height: 107.5%;
+                            margin-bottom: 20px;
+                        }
+    
+                        h5 {
+                            color: #000;
+                            font-family: Sora;
+                            font-size: 15px;
+                            font-style: normal;
+                            font-weight: 500;
+                            line-height: 107.5%;
+                            display: flex;
+                            padding: 0px 5px 5px 0px;
+                            align-items: center;
+                            align-self: stretch;
+                            border-bottom: 0.5px solid #000;
+                        }
+    
+                    }
+    
+    
+                }
+    
+            }
+    
+        }
+    
+    
+    }
+    .float__wapp {
+        display: flex;
+        position: fixed;
+        width:0px;
+        height: 0px;
+        top: 8vh;
+        left: 70vw;
+        z-index: 1;
+        transform: scale(1);
+        rotate: 20deg;
+    
+        .botonfloat__wapp {
+            margin-top: 23px;
+            margin-left: 23px;
+            position: absolute;
+            z-index: 1;
+        }
+    
+        .botonfloat__wapp:hover {
+            transform: scale(1.1);
+        }
+    
+    
+        .backfloat__wapp {
+            position: absolute;
+            z-index: 0;
+            animation-name: backfloat;
+            animation-duration: 10s;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+        }
+    
+    }
+}
 
 /* ##################### PIE ############################# */
 .cont_pie_de_pagina {
