--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -123,7 +123,7 @@ p {
 
 /* ################# NUEVO MENU ############## */
 .conte__menu {
-  margin: 1em calc(1px + 5vw) 1em calc(1px + 5vw);
+  margin: 2em calc(1px + 5vw) 2em calc(1px + 5vw);
 
   .header__index {
     display: flex;
@@ -180,9 +180,9 @@ p {
 
   .contendor_activo_de_menu {
     padding: 8rem 4rem 3rem 5rem;
-    right: -10em;
+    right: -100vw;
     top: 0px;
-    width: 0px;
+    width: 100%;
     height: 100vh;
     position: fixed;
     z-index: 9;
@@ -208,11 +208,11 @@ p {
       }
 
       .lista_uno {
-        width: 0%;
+        width: 100%;
         margin-bottom: 20px;
 
         .cont_opcion_lista {
-          width: 0%;
+          width: 100%;
           display: flex;
           flex-direction: row;
           align-items: center;
@@ -280,7 +280,7 @@ p {
       }
 
       .list_social {
-        width: 0%;
+        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -648,6 +648,40 @@ p {
 }
 
 @media (max-width: 1000px) {
+  .float__wapp {
+    display: flex;
+    position: fixed;
+    width: 0px;
+    height: 0px;
+    top: 5vh;
+    left: 70vw;
+    z-index: 1;
+    transform: scale(1);
+    rotate: 20deg;
+
+    a {
+      .botonfloat__wapp {
+        margin-top: 23px;
+        margin-left: 23px;
+        position: absolute;
+        z-index: 1;
+      }
+
+      .botonfloat__wapp:hover {
+        transform: scale(1.1);
+      }
+
+      .backfloat__wapp {
+        position: absolute;
+        z-index: 0;
+        animation-name: backfloat;
+        animation-duration: 10s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+      }
+    }
+  }
+
 }
 
 @media (max-width: 720px) {
