--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -1,2 +1,171 @@
+.body_plantilla {
+    width: 100%;
+
+    .cont_inicio {
+        display: flex;
+        height: 100vh;
+        flex-direction: row;
+        margin: 2em 5vw 2em 5vw;
+        gap: 2em;
 
 
+        .colum_uno {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            .titulo {
+                color: #000;
+                font-family: Margo + Beuys;
+                font-size: 75px;
+                font-style: normal;
+                font-weight: 900;
+                line-height: 136%;
+                /* 102px */
+                text-transform: uppercase;
+            }
+
+            .parrafo {
+                color: #000;
+                font-family: poppins;
+                font-size: 15px;
+                font-style: normal;
+                font-weight: 300;
+                line-height: 136%;
+                /* 20.4px */
+                text-transform: capitalize;
+                padding-bottom: 2em;
+                border-bottom: 1px solid #414141;
+            }
+
+            .contadores {}
+        }
+
+        .colum_dos {
+            background: #D9D9D9;
+            width: 50%;
+            height: 100%;
+            flex-shrink: 0;
+        }
+    }
+
+    .cont_cinta_plantilla {
+        position: relative;
+        width: 100%;
+        height: 50px;
+        overflow-x: hidden;
+
+        .slider_inicio {
+            width: 100%;
+            position: absolute;
+            height: 50px;
+            display: flex;
+            align-items: start;
+            flex-shrink: 0;
+            overflow: hidden;
+            background: #ffffff;
+
+            .slide-track {
+                width: 100%;
+                -webkit-animation: 10s linear infinite;
+                animation: 10s linear infinite;
+                animation-name: scroll101;
+                display: flex;
+                width: 2400px;
+                align-items: start;
+                gap: 1px;
+
+                .slide {
+                    height: 50px;
+                    width: 200px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    p {
+                        padding-top: 10px;
+                        padding-bottom: 10px;
+                        color: #000;
+                        text-align: center;
+                        font-family: MargoBeuys;
+                        font-size: 15px;
+                        font-style: normal;
+                        font-weight: 300;
+                        line-height: 106%;
+                        white-space: nowrap;
+                    }
+                }
+            }
+        }
+    }
+
+
+
+    .cont_grilla_proyectos{
+        margin: 2em 5em 10em 5em;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .cont_proyectos {
+            width: min-content;
+            display: flex;
+            flex-direction: column;
+            img {}
+    
+            .cont_pie_proyecto {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                margin-top: 10px;
+                p {
+                    color: #000;
+                    font-family: Margo + Beuys;
+                    font-size: 15px;
+                    font-style: normal;
+                    font-weight: 900;
+                    line-height: 136%;
+                    /* 20.4px */
+                    text-transform: capitalize;
+                }
+    
+                .cont_fecha {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 5px;
+                    img {
+    
+                    }
+    
+                    p {
+                        color: #000;
+                        font-family: Margo + Beuys;
+                        font-size: 10px;
+                        font-style: normal;
+                        font-weight: 900;
+                        line-height: 136%;
+                        /* 13.6px */
+                        text-transform: capitalize;
+                        white-space: nowrap;
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+
+@keyframes scroll101 {
+    0% {
+        -webkit-transform: translateX(0px);
+        transform: translateX(0px);
+    }
+
+    100% {
+        -webkit-transform: translateX(-200px);
+        transform: translateX(-400px);
+    }
+}
