--- a/style/sass.css
+++ b/style/sass.css
@@ -72,6 +72,37 @@ body::-webkit-scrollbar-thumb {
   animation-timing-function: linear;
 }
 
+.float__wapp_dos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 30px;
+  right: 120px;
+  z-index: 1;
+}
+.float__wapp_dos a {
+  width: 400%;
+  height: 100px;
+}
+.float__wapp_dos a .botonfloat__wapp {
+  margin-top: 23px;
+  margin-left: 23px;
+  position: absolute;
+  z-index: 1;
+}
+.float__wapp_dos a .botonfloat__wapp:hover {
+  transform: scale(1.1);
+}
+.float__wapp_dos a .backfloat__wapp {
+  position: absolute;
+  z-index: 0;
+  animation-name: backfloat;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
 /* ################# CURSOR ############## */
 .grow,
 .grow-small {
@@ -3902,6 +3933,148 @@ body {
     line-height: 138.5%; /* 22.16px */
     letter-spacing: 0.16px;
     cursor: pointer;
+  }
+}
+.body_plantilla {
+  width: 100%;
+}
+.body_plantilla .cont_inicio {
+  display: flex;
+  height: 100vh;
+  flex-direction: row;
+  margin: 2em 5vw 2em 5vw;
+  gap: 2em;
+}
+.body_plantilla .cont_inicio .colum_uno {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.body_plantilla .cont_inicio .colum_uno .titulo {
+  color: #000;
+  font-family: MargoBeuys;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 136%;
+  /* 102px */
+  text-transform: uppercase;
+}
+.body_plantilla .cont_inicio .colum_uno .parrafo {
+  color: #000;
+  font-family: poppins;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 136%;
+  /* 20.4px */
+  text-transform: capitalize;
+  padding-bottom: 2em;
+  border-bottom: 1px solid #414141;
+}
+.body_plantilla .cont_inicio .colum_dos {
+  background: #D9D9D9;
+  width: 50%;
+  height: 100%;
+  flex-shrink: 0;
+}
+.body_plantilla .cont_cinta_plantilla {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  overflow-x: hidden;
+}
+.body_plantilla .cont_cinta_plantilla .slider_inicio {
+  width: 100%;
+  position: absolute;
+  height: 50px;
+  display: flex;
+  align-items: start;
+  flex-shrink: 0;
+  overflow: hidden;
+  background: #ffffff;
+}
+.body_plantilla .cont_cinta_plantilla .slider_inicio .slide-track {
+  width: 100%;
+  animation: 10s linear infinite;
+  animation-name: scroll101;
+  display: flex;
+  width: 2400px;
+  align-items: start;
+  gap: 1px;
+}
+.body_plantilla .cont_cinta_plantilla .slider_inicio .slide-track .slide {
+  height: 50px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.body_plantilla .cont_cinta_plantilla .slider_inicio .slide-track .slide p {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #000;
+  text-align: center;
+  font-family: MargoBeuys;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 106%;
+  white-space: nowrap;
+}
+.body_plantilla .cont_grilla_proyectos {
+  margin: 2em 5em 10em 5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.body_plantilla .cont_grilla_proyectos .cont_proyectos {
+  width: -moz-min-content;
+  width: min-content;
+  display: flex;
+  flex-direction: column;
+}
+.body_plantilla .cont_grilla_proyectos .cont_proyectos .cont_pie_proyecto {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.body_plantilla .cont_grilla_proyectos .cont_proyectos .cont_pie_proyecto p {
+  color: #000;
+  font-family: MargoBeuys;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 136%;
+  /* 20.4px */
+  text-transform: capitalize;
+}
+.body_plantilla .cont_grilla_proyectos .cont_proyectos .cont_pie_proyecto .cont_fecha {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+}
+.body_plantilla .cont_grilla_proyectos .cont_proyectos .cont_pie_proyecto .cont_fecha p {
+  color: #000;
+  font-family: MargoBeuys;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 136%;
+  /* 13.6px */
+  text-transform: capitalize;
+  white-space: nowrap;
+}
+
+@keyframes scroll101 {
+  0% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(-400px);
   }
 }
 .body__index {
